About and services

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         Placeat quisquam molestiae beatae exercitationem laboriosam 
                         aliquid blanditiis distinctio. Nobis iusto repellat</p>
                         <div class="button">
-                            <a href="#" class="btn btn-1">get started </a>
+                            <a href="#" class="btn btn-1">Learn More </a>
                             <a href="#" class="btn">dwonload the app </a>
                         </div>
                 </div>
@@ -106,7 +106,119 @@
         </section>
 
 
-    <!-- HOME SECTION  ENDS  -->
+    <!-- ABOUT SECTION  ENDS  -->
+    <!-- SERVICES   SECTION STARTS  -->
+        <section class="services">
+            <h1>our services</h1>
+            <div class="container">
+                <div class="box">
+                    <img src="./images/girls working-out.jpg">
+                    <div class="info">
+                        <h3>treadmill</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Voluptate hic veritatis ad incidunt quis magnam, quasi
+                             quibusdam eos doloribus veniam modi de</p>
+                             <div class="button">
+                                <a href="#" class="btn btn-1"> More </a>
+                            </div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <img src="./images/girls working-out.jpg">
+                    <div class="info">
+                        <h3>yoga</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Voluptate hic veritatis ad incidunt quis magnam, quasi
+                             quibusdam eos doloribus veniam modi de</p>
+                             <div class="button">
+                                <a href="#" class="btn btn-1">  More </a>
+                            </div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <img src="./images/girls working-out.jpg">
+                    <div class="info">
+                        <h3>equipment</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Voluptate hic veritatis ad incidunt quis magnam, quasi
+                             quibusdam eos doloribus veniam modi de</p>
+                             <div class="button">
+                                <a href="#" class="btn btn-1"> More </a>
+                            </div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <img src="./images/girls working-out.jpg">
+                    <div class="info">
+                        <h3>trainer</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Voluptate hic veritatis ad incidunt quis magnam, quasi
+                             quibusdam eos doloribus veniam modi de</p>
+                             <div class="button">
+                                <a href="#" class="btn btn-1"> More </a>
+                            </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./images/girls working-out.jpg">
+                    <div class="info">
+                        <h3>boxing</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Voluptate hic veritatis ad incidunt quis magnam, quasi
+                             quibusdam eos doloribus veniam modi de</p>
+                             <div class="button">
+                                <a href="#" class="btn btn-1"> More  </a>
+                            </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./images/girls working-out.jpg">
+                    <div class="info">
+                        <h3>weight lifting</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Voluptate hic veritatis ad incidunt quis magnam, quasi
+                             quibusdam eos doloribus veniam modi de</p>
+                             <div class="button">
+                                <a href="#" class="btn btn-1"> More </a>
+                            </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+
+
+
+
+    <!-- SERVICES SECTION  ENDS  -->
+    <!-- TRAINER SECTION  STARTS  -->
+        <section class="trainers">
+            <h1>our trainers</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Excepturi, obcaecati illum? Consequuntur maxime ex magnam,
+                  
+            </p>
+            <div class="items">
+                <div class="item">
+                    <img src="./images/kits.jpg" >
+                    <div class="inner">
+                        <div class="info">
+                            <h4>John Wick</h4>
+                            <p>online coach</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+    <!-- TRAINER  SECTION  ENDS  -->
 
 
 
