--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         <a href="#" class="logo">Fit<span>fam</span></a>
 
         <nav class="navbar">
-            <a href="#">Home</a>
-            <a href="#">about</a>
-            <a href="#">services</a>
-            <a href="#">news</a>
-            <a href="#">contact</a>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#trainers">Trainers</a>
+            <a href="#pricing">Pricing</a>
+            <a href="#contact">contact</a>
         </nav>
 
         <div class="icons">
@@ -38,14 +39,14 @@
     <!-- Header section ends -->
     <!-- HOME SECTION  STARTS  -->
 
-    <section class="home">
+    <section class="home" id="home">
 
         <div class=" swiper home-slider">
 
             <div class="swiper-wrapper">
 
                 <div class="swiper-slide box" style="background:linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.3)),
-                    url('images/girls\ working-out.jpg');">
+                    url('images/green-fruit-2.jpg');">
                         <div class="content">
                             <h3>join fitfam today</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis tempore, 
@@ -80,7 +81,7 @@
     </section>
     <!-- HOME SECTION  ENDS  -->
     <!-- ABOUT SECTION  STARTS -->
-        <section class="about">
+        <section class="about" id="about">
             <div class="row">
                 <div class="image">
                     <img src="./images/lady 1.jpg">
@@ -108,11 +109,11 @@
 
     <!-- ABOUT SECTION  ENDS  -->
     <!-- SERVICES   SECTION STARTS  -->
-        <section class="services">
+        <section class="services" id="services">
             <h1>our services</h1>
             <div class="container">
                 <div class="box">
-                    <img src="./images/girls working-out.jpg">
+                    <img src="./images/treadmill.jpeg">
                     <div class="info">
                         <h3>treadmill</h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
@@ -125,7 +126,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="./images/girls working-out.jpg">
+                    <img src="./images/yoga.jpeg">
                     <div class="info">
                         <h3>yoga</h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
@@ -138,7 +139,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="./images/girls working-out.jpg">
+                    <img src="./images/equipment.jpg">
                     <div class="info">
                         <h3>equipment</h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
@@ -151,7 +152,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="./images/girls working-out.jpg">
+                    <img src="./images/gym-trainer.jpg">
                     <div class="info">
                         <h3>trainer</h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
@@ -163,7 +164,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="./images/girls working-out.jpg">
+                    <img src="./images/gym-boxing.jpeg">
                     <div class="info">
                         <h3>boxing</h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
@@ -175,7 +176,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="./images/girls working-out.jpg">
+                    <img src="./images/weight-lifting.jpeg">
                     <div class="info">
                         <h3>weight lifting</h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
@@ -196,7 +197,7 @@
 
     <!-- SERVICES SECTION  ENDS  -->
     <!-- TRAINER SECTION  STARTS  -->
-        <section class="trainers">
+        <section class="trainers" id="trainers">
             <h1>our trainers</h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -205,20 +206,175 @@
             </p>
             <div class="items">
                 <div class="item">
-                    <img src="./images/kits.jpg" >
+                    <img src="./images/trainer-1.png">
                     <div class="inner">
                         <div class="info">
                             <h4>John Wick</h4>
                             <p>online coach</p>
+                            <div class="links">
+                                <a href="#"><i class="fab fa-facebook"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-tiktok"></i></a>
+                                <a href="#"><i class="fab fa-youtube"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="item">
+                    <img src="./images/trainer-2.png">
+                    <div class="inner">
+                        <div class="info">
+                            <h4>Michael Eze </h4>
+                            <p>online coach</p>
+                            <div class="links">
+                                <a href="#"><i class="fab fa-facebook"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-tiktok"></i></a>
+                                <a href="#"><i class="fab fa-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./images/trainer-3.png">
+                    <div class="inner">
+                        <div class="info">
+                            <h4>Michael jackson</h4>
+                            <p>online coach</p>
+                            <div class="links">
+                                <a href="#"><i class="fab fa-facebook"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-tiktok"></i></a>
+                                <a href="#"><i class="fab fa-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./images/trainer-4.png">
+                    <div class="inner">
+                        <div class="info">
+                            <h4>Idris Yuno</h4>
+                            <p>online coach</p>
+                            <div class="links">
+                                <a href="#"><i class="fab fa-facebook"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-tiktok"></i></a>
+                                <a href="#"><i class="fab fa-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </section>
 
 
 
     <!-- TRAINER  SECTION  ENDS  -->
+    <!-- PRICING SECTION  STARTS  -->
+
+        <section class="pricing" id="pricing">
+            <div class="information">
+                <span>pricing plan</span>
+                <h3>Affordable pricing plan for your </h3>
+                <p>Lorem ipsum, dolor sit amet consectetur 
+                    adipisicing elit. Quae, quia provident </p>
+                    <p><i class="fas fa-check"></i> cardio exercise </p>
+                    <p><i class="fas fa-check"></i> Unlimitd workouts </p>
+                    <p><i class="fas fa-check"></i> 800+ healthy recipes</p>
+                    <p><i class="fas fa-check"></i> Progress tracker </p>
+                    <a href="#" class="btn">Start Your Free Trial  </a>
+            </div>
+
+            <div class="plan basic">
+                    <h3>basic plan</h3>
+                    <div class="price"><span>$</span>50<span>/mo</span></div>
+                    <div class="list">
+                        <p><i class="fas fa-check"></i> personal training </p>
+                        <p><i class="fas fa-check"></i> cardio exercise </p>
+                        <p><i class="fas fa-check"></i> weight lifting</p>
+                        <p><i class="fas fa-check"></i> diet plans </p>
+                        <p><i class="fas fa-check"></i> overall results </p>
+                    </div>
+                    <a href="#" class="btn">get started</a>
+            </div>
+
+            <div class="plan">
+                <h3>premium plan</h3>
+                <div class="price"><span>$</span>100<span>/mo</span></div>
+                <div class="list">
+                    <p><i class="fas fa-check"></i> personal training </p>
+                    <p><i class="fas fa-check"></i> cardio exercise </p>
+                    <p><i class="fas fa-check"></i> weight lifting</p>
+                    <p><i class="fas fa-check"></i> diet plans </p>
+                    <p><i class="fas fa-check"></i> Yoga  </p>
+                    <p><i class="fas fa-check"></i> flexibilty training  </p>
+                    <p><i class="fas fa-check"></i> overall results </p>
+                </div>
+                <a href="#" class="btn">get started</a>
+        </div>
+
+
+
+        </section>
+    <!-- PRICING  SECTION  ENDS  -->
+    <!-- FOOTER  SECTION  ENDS  -->
+        <section class="footer" id="contact">
+
+            <div class="box-container">
+
+                <div class="box">
+                    <h3>Quick links </h3>
+                    <a href="#home"> <i class="fas fa-angle-right"></i>Home</a>
+                    <a href="#about"> <i class="fas fa-angle-right"></i>About</a>
+                    <a href="#Services"> <i class="fas fa-angle-right"></i>Services</a>
+                    <a href="#Trainers"> <i class="fas fa-angle-right"></i>Trainers</a>
+                    <a href="#Pricing"> <i class="fas fa-angle-right"></i>Pricing</a>
+                    <a href="#Contact"> <i class="fas fa-angle-right"></i>Contact</a>
+
+                    
+                </div>
+                <div class="box">
+                    <h3>Contact info </h3>
+                    <a href="#"><i class="fas fa-phone"></i> +234-8031-2534</a>
+                    <a href="#"><i class="fas fa-phone"></i> +234-8031-2534</a>
+                    <a href="#"><i class="fas fa-envelope"></i> allison@gmail.com</a>
+                    <a href="#"><i class="fas fa-map"></i> Lagos, Nigeria - 10001</a>
+                </div>
+
+                <div class="box">
+                    <h3>Follow us </h3>
+                    <a href="#"><i class="fab fa-facebook"></i>facebook</a>
+                    <a href="#"><i class="fab fa-twitter"></i>twitter</a>
+                    <a href="#"><i class="fab fa-tiktok"></i>Tiktok</a>
+                    <a href="#"><i class="fab fa-youtube"></i>Youtube</a>
+                </div>
+
+                <div class="box">
+                    <h3>Newsletter</h3>
+                    <p>Subscribe for latest updates </p>
+                    <form action="">
+                        <input type="email" name="" placeholder="enter your email" id="" class="email">
+                        <input type="submit" value="subscribe" class="link-btn">
+                    </form>
+                </div>
+
+            </div>
+
+            <p class="credit">
+                created by <span> Allison isituah </span> | all rights resrved!
+            </p>
+
+
+        </section>
+
+
+
+
+
+
+    <!-- FOOTER  SECTION  STARTSS  -->
 
 
 
